# daedalus

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  eip-library-master-plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: diff_emulate.py
src/daedalus/: __init__.py  connection.py  exceptions.py  tag.py
src/daedalus/cip/: __init__.py  constants.py  custom_types.py  data_types.py  object_library.py  segments.py  services.py  status.py  templates.py
src/daedalus/drivers/: __init__.py  _async_logix.py  _logix.py
src/daedalus/packets/: __init__.py  cip.py  encap.py  forward_open.py
src/daedalus/runtime/: __init__.py  write_policy.py
src/daedalus/session/: __init__.py  _session.py
src/daedalus/transport/: __init__.py  _async_tcp.py  _tcp.py
tests/: conftest.py  strategies.py  test_connection.py  test_golden_vectors.py  test_parity_oracle.py  test_sans_io_firewall.py  test_smoke.py  test_write_firewall.py
tests/cip/: test_custom_types.py  test_data_types.py  test_segments.py  test_services.py  test_status.py  test_templates.py
tests/drivers/: conftest.py  test_async_logix_e2e.py  test_async_parity.py  test_logix_continuation.py  test_logix_driver.py  test_logix_e2e.py  test_parity_templates.py  test_replay_struct.py  test_tag_list.py  test_tag_list_e2e.py  test_tag_list_live.py  test_udt_e2e.py  test_udt_live.py  test_write_e2e.py  test_write_live.py  test_write_parity.py
tests/fixtures/golden/: codec_vectors.json
tests/fixtures/replay/: Active_Alarms_scalar_read.jsonl  AutoStart_State_scalar_read.jsonl  Burner_IDF_Req_SP_scalar_read.jsonl  Program_P_Seq_Seq_Burner_StateHistory_array_read.jsonl  README.md  VFD_101_Fault_bare_read.jsonl  VFD_101_Fault_member_desc_read.jsonl
tests/packets/: test_cip_message.py  test_encap.py
tests/runtime/: test_write_policy.py
tests/session/: test_connection_identity.py  test_forward_open.py  test_session.py
tests/sim/: server.py
tests/transport/: test_async_transport.py  test_forward_open_e2e.py  test_transport.py
